<resources>
    <string name="app_name">newsPost</string>
    <string name="writeNewPost">Escreva uma Notícia</string>
    <string name="title">Título</string>
    <string name="writeNews">Escreva sua Notícia</string>
    <string name="publishDate">Data de Publicação</string>
    <string name="autor">Autor</string>
    <string name="publishNews">Publicar Notícia</string>
    <string name="title_activity_write_news">WriteNews</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_read_news">ReadNews</string>
    <string name="title_activity_post_news">PostNews</string>
</resources>